Fixed bug cause by overflowing tag list ruining the formatting

--- a/src/Components/Reusable/MediaContainer.module.css
+++ b/src/Components/Reusable/MediaContainer.module.css
@@ -10,22 +10,21 @@
     }
 }
 
-.MediaContainer{
+.ThumbnailTitlePair{
     position: relative;
-    display: flex;
+    max-width: 100%;
     flex-direction: column;
-    vertical-align: top;
-    justify-content: center;
-    align-items: center;
+    margin: 0.5em;
+}
+.MediaContainer{
     margin: 0.5em;
     border-radius: 0.5em;
     padding:0.5em;
     opacity: 100%;
-
+    max-width: 370px;
     background-color: var(--pane-color);
     border:none;
     backdrop-filter: blur(0.5px);
-    
     
     transition: opacity 0.2s;
     animation: fadeIn 0.7s ease-in-out;
@@ -49,28 +48,33 @@
 
 }
 .MediaImage{
-    max-width: 25em;
+    width: 100%;
+    max-height: 200px;
+    border-radius: 0.2em;
+    overflow: hidden;
 }
 .TagList{
     display: flex;
     flex-direction: row;
-    width: 100%;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    justify-content: left;
+    flex-wrap: wrap;
+    max-width: 350px;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+    padding: 0.2em;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
 }
 .Tag{
     padding: 0.5em;
     margin-right: 0.2em;
     margin-top: 0.2em;
     background-color: grey;
-    flex-basis: 1;
-    width: 25%;
     text-overflow: none;
     color:white;
+    max-width:100%;
     font-weight: bolder;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    border-radius: 0.2em;
 }
 .DownloadButton{
     position: absolute;
